compiler/eight-tests/tests/snapshots/ui_tests__compiler_ui_tests@type__invalid_field_reference_of_non_struct.test.snap
---
source: compiler/eight-tests/tests/ui_tests.rs
info:
  program: eightc
  args:
    - tests/ui/type/invalid_field_reference_of_non_struct.test
input_file: compiler/eight-tests/tests/ui/type/invalid_field_reference_of_non_struct.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: sema::invalid_field_reference_of_non_struct

  × type $1 is not a record type and does not have fields
   ╭─[tests/ui/type/invalid_field_reference_of_non_struct.test:2:13]
 1 │ fn test(q: i32) {
 2 │   let k = q.z;
   ·             ┬
   ·             ╰── unknown field z
 3 │ }
   ╰────
